[gd_scene load_steps=21 format=2]

[ext_resource path="res://turtle/Battle_turtle_walk.png" type="Texture" id=1]
[ext_resource path="res://turtle/Battle_turtle_death.png" type="Texture" id=2]
[ext_resource path="res://turtle/Battle_turtle_attack1.png" type="Texture" id=3]
[ext_resource path="res://turtleEnemie.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 30.2814, 10.2854 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 26.4742, 6.2643 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 19.4052, 10.7314 )

[node name="turtle" type="KinematicBody2D"]
position = Vector2( 0.845839, 0.430557 )
collision_layer = 16
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0710983, 0.309799 )
scale = Vector2( 1.01779, 0.939883 )
frames = SubResource( 13 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.8933, 23.5189 )
shape = SubResource( 14 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 10.1839, 26.2343 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( 10.7156, 6.23285 )
collision_layer = 2147483664

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0.396851, -2.3811 )
shape = SubResource( 15 )

[node name="side_checker" type="Area2D" parent="."]
position = Vector2( -2.97638, 22.8189 )
collision_layer = 16
collision_mask = 33
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
shape = SubResource( 16 )
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
